# rtd-tutorial

./: .readthedocs.yaml  pyproject.toml
docs/source/: index.rst
