[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
docs = [
    "sphinx==7.1.2",
    "furo==2024.08.06"
]
